test/valid/BooleanToString/BooleanToString.plume
/**
 * A class to test the toString method of Boolean.
 *
 * @author Diogo Marques, 30100
 */
class BooleanToString extends Object is

  method main : () -> String is
    true.toString()